--- a/AppBancaEnLinea/AppBancaEnLinea/Views/MainPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/MainPage.xaml
@@ -44,40 +44,35 @@
 					<RowDefinition Height="AUTO"  />
 				</Grid.RowDefinitions>
 				<Button Grid.Column="0"                     
-                    Text="+"
-                    TextColor="White"
-					FontAttributes="Bold"
-					FontSize="22"
-                    BackgroundColor="Green"
+                    Image="anadir.png"
+						Padding="15"
+                    BackgroundColor="White"
                     HorizontalOptions="Start"
                     CornerRadius="50"
 					Margin="15, 0"
                     Clicked="AgregarTapped"/>
 				<Button Grid.Column="1" 
-					Image="tt.png"
+					Image="modificar.png"
 						Padding="15"
-                    TextColor="Black" 
                     BackgroundColor="White"
                     HorizontalOptions="Center"
 					Margin="15, 0"
 					CornerRadius="50"
                     Clicked="ModificarTapped"/>
 				<Button Grid.Column="2"                     
-                    Text="-"
+                    Image="eliminar.png"
+						Padding="15"
 					FontAttributes="Bold"
-					FontSize="24"
-                    TextColor="Black"
                     BackgroundColor="White"
                     CornerRadius="50"
-					Margin="15, 0"
+					Margin="12, 0"
                     HorizontalOptions="End"
                     Clicked="EliminarTapped"/>
-				<Button Grid.Column="3"                     
-					Text="A"
-                    BorderColor="Navy" 
-                    BackgroundColor="Navy" 
-                    TextColor="Silver" 
-                    CornerRadius="30"
+				<Button Grid.Column="3" 
+					Image="actualizar.png"
+						Padding="15"
+                    BackgroundColor="White"  
+                    CornerRadius="50"
 					HorizontalOptions="End"
                     Clicked="Btn_RefrescarPantalla"
                     Margin="15, 0"/>
@@ -93,7 +88,6 @@
                     BackgroundColor="DarkRed"
                     HorizontalOptions="FillAndExpand"
                     CornerRadius="30"
-					Margin="0, 0"
                     Clicked="CerrarSesionTapped"/>
 			</Grid>
 			
