--- a/AppBancaEnLinea/AppBancaEnLinea/Views/CuentaPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/CuentaPage.xaml
@@ -16,27 +16,28 @@
                    HorizontalTextAlignment="Center"
                    HorizontalOptions="Fill"
                    FontSize="Small"></Entry>
-            <Entry x:Name="Txt_Descripcion"
+			<Entry x:Name="Txt_Descripcion"
                    Placeholder="Ingrese la descripción"
                    HorizontalTextAlignment="Center"
                    HorizontalOptions="Fill"
                    FontSize="Small"></Entry>
-            <Picker Title="Seleccione un tipo de moneda"
-                    x:Name="Pkr_Moneda"
-					HorizontalOptions="Fill"
-                    FontSize="Small">
-                <Picker.Items>
-                    <x:String>DOLARES</x:String>
-                    <x:String>COLONES</x:String>
-                    <x:String>EUROS</x:String>
-                </Picker.Items>
-            </Picker>
 			<Entry x:Name="Txt_Saldo"
                    Placeholder="Ingrese el saldo"
                    HorizontalTextAlignment="Center"
                    HorizontalOptions="Fill"
-                   FontSize="Small"></Entry>
-
+                   FontSize="Small">
+			</Entry>
+			<Picker Title="Seleccione un tipo de moneda"
+                    x:Name="Pkr_Moneda"
+					HorizontalOptions="Fill"
+                    FontSize="Small">
+				<Picker.Items>
+					<x:String>DOLARES</x:String>
+					<x:String>COLONES</x:String>
+					<x:String>EUROS</x:String>
+				</Picker.Items>
+			</Picker>
+			
 			<Picker Title="Seleccione un estado"
                     x:Name="Pkr_Estado"
                     FontSize="Small"
